metallb/anotherweb.yaml
# API Deployment
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: api-deployment
spec:
  selector:
    matchLabels:
      app: api-deployment
  template:
    metadata:
      labels:
        app: api-deployment
    spec:
      containers:
        - name: api 
          image: nginx
          ports:
            - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: api-deployment-svc
spec:
  ports:
    - port: 80
      targetPort: 80
  selector: 
    app: api-deployment
