metallb/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: deploy.webapp.com
    http:
      paths:
      - pathType: Prefix 
        path: "/"
        backend:
          service:
            name: web-app-service
            port:
              number: 80

  - host: api.webapp.com   
    http:
      paths:
      - pathType: Prefix 
        path: "/"
        backend:
          service:
            name: api-deployment-svc
            port:
              number: 80
